[tool.poetry]
name = "miniblog-api"
version = "0.1.0"
description = ""
authors = ["sulav maharjan <sulavmaharjan63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.86.0"}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
