[tool.poetry]
name = "miniblog-api"
version = "0.1.0"
description = ""
authors = ["sulav maharjan <sulavmaharjan63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.86.0"}
SQLAlchemy = "^1.4.42"
loguru = "^0.6.0"
alembic = "^1.8.1"
pydantic = "^1.10.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
Pillow = "^9.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
